[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GameUI/EventUI/ClockEvents/ClockLookEventUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameUI/EventUI/ClockEvents/AlarmClockEvents/AlarmClockLookEventUI.gd" type="Script" id=2]

[node name="AlarmClockLookEventUI" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="BodyLabel" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer" index="1"]
text = "The clock reads             .
"

[node name="TimeLabel" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyLabel" index="0"]
margin_top = -10.5
margin_bottom = -1.5

[node name="FlashingTimeLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyLabel" index="1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = 1.5
margin_right = 83.0
margin_bottom = 10.5
text = "The clock is flashing the time."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashTimer" type="Timer" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer" index="3"]
wait_time = 0.7

[connection signal="timeout" from="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/FlashTimer" to="." method="_on_FlashTimer_timeout"]
